--- a/argocd/applications/core/cilium/bgp-advertisement.yaml
+++ b/argocd/applications/core/cilium/bgp-advertisement.yaml
@@ -12,7 +12,5 @@ spec:
           - LoadBalancerIP
       selector:
         matchExpressions:
+          # Advertise all LoadBalancer services
           - { key: unused, operator: NotIn, values: [ unused ] }
-      attributes:
-        communities:
-          standard: [ "64512" ]
