--- a/argocd/applications/core/cilium/http-route.yaml
+++ b/argocd/applications/core/cilium/http-route.yaml
@@ -1,18 +1,21 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: op-connect-route
-  namespace: op-connect
+  name: hubble-route
+  namespace: kube-system
 spec:
   parentRefs:
     - name: traefik-gateway
+      namespace: traefik
+
   hostnames:
-    - op-connect.kube.squatch.dev
+    - hubble.kube.squatch.dev
+
   rules:
     - matches:
         - path:
             type: PathPrefix
             value: /
       backendRefs:
-        - name: op-connect
-          port: 8080
+        - name: hubble-ui
+          port: 80
