--- a/argocd/resources/projects/core.yaml
+++ b/argocd/resources/projects/core.yaml
@@ -10,13 +10,19 @@ spec:
   destinations:
     - namespace: argocd
       server: https://kubernetes.default.svc
+    - namespace: ceph-csi*
+      server: https://kubernetes.default.svc
     - namespace: cert-manager
       server: https://kubernetes.default.svc
-    - namespace: cilium-secrets
+    - namespace: cilium*
       server: https://kubernetes.default.svc
     - namespace: external-secrets
       server: https://kubernetes.default.svc
+    - namespace: kubernetes-dashboard
+      server: https://kubernetes.default.svc
     - namespace: kube-system
+      server: https://kubernetes.default.svc
+    - namespace: metrics-server
       server: https://kubernetes.default.svc
     - namespace: op-connect
       server: https://kubernetes.default.svc
