--- a/argocd/applications/core/synology-csi/credentials-secret.yaml
+++ b/argocd/applications/core/synology-csi/credentials-secret.yaml
@@ -14,3 +14,6 @@ spec:
       remoteRef:
         key: kube.squatch.dev/synology-csi.client-info
         property: client-info.yml
+        conversionStrategy: Default
+        decodingStrategy: None
+        metadataPolicy: None
