--- a/argocd/applications/core/cert-manager/token-secret.yaml
+++ b/argocd/applications/core/cert-manager/token-secret.yaml
@@ -14,3 +14,6 @@ spec:
       remoteRef:
         key: kube.squatch.dev/cert-manager.cloudflare-api-token
         property: password
+        conversionStrategy: Default
+        decodingStrategy: None
+        metadataPolicy: None
