--- a/argocd/applications/core/external-secrets/token-secret.yaml
+++ b/argocd/applications/core/external-secrets/token-secret.yaml
@@ -14,3 +14,6 @@ spec:
       remoteRef:
         key: kube.squatch.dev/external-secrets.op-connect-token
         property: password
+        conversionStrategy: Default
+        decodingStrategy: None
+        metadataPolicy: None
