--- a/argocd/applications/core/op-connect/credentials-secret.yaml
+++ b/argocd/applications/core/op-connect/credentials-secret.yaml
@@ -14,3 +14,6 @@ spec:
       remoteRef:
         key: kube.squatch.dev/op-connect.op-credentials
         property: 1password-credentials.json.b64
+        conversionStrategy: Default
+        decodingStrategy: None
+        metadataPolicy: None
