--- a/argocd/applications/dev/media/immich/http-route.yaml
+++ b/argocd/applications/dev/media/immich/http-route.yaml
@@ -1,8 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: hubble-route
-  namespace: kube-system
+  name: immich-route
 spec:
   parentRefs:
     - group: gateway.networking.k8s.io
@@ -11,7 +10,7 @@ spec:
       namespace: traefik
 
   hostnames:
-    - hubble.kube.squatch.dev
+    - immich-dev.squatch.dev
 
   rules:
     - matches:
@@ -21,6 +20,6 @@ spec:
       backendRefs:
         - group: ""
           kind: Service
-          name: hubble-ui
-          port: 80
+          name: dev-immich-server
+          port: 2283
           weight: 1
