--- a/argocd/resources/projects/core.yaml
+++ b/argocd/resources/projects/core.yaml
@@ -16,6 +16,8 @@ spec:
       server: https://kubernetes.default.svc
     - namespace: cilium*
       server: https://kubernetes.default.svc
+    - namespace: cnpg-system
+      server: https://kubernetes.default.svc
     - namespace: external-secrets
       server: https://kubernetes.default.svc
     - namespace: kubernetes-dashboard
